--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 <label for="avocado">Avocado</label>
             </td>
             <td>
-                <input type="checkbox" name="toppings" id="lobster" value="2" disabled <label
+                <input type="checkbox" name="toppings" id="lobster" value="2" disabled> <label
                     for="lobster">Lobster</label>
             </td>
             <td>
@@ -94,7 +94,7 @@
                 <label for="broccoli">Broccoli</label>
             </td>
             <td>
-                <input type="checkbox" name="toppings" id="oyster" value="2" disabled <label for="oyster">Oyster</label>
+                <input type="checkbox" name="toppings" id="oyster" value="2" disabled> <label for="oyster">Oyster</label>
             </td>
             <td>
                 <input type="checkbox" name="toppings" id="duck" value="3" disabled>
@@ -107,7 +107,7 @@
                 <label for="onion">Onion</label>
             </td>
             <td>
-                <input type="checkbox" name="toppings" id="salmon" value="2" disabled <label for="salmon">Salmon</label>
+                <input type="checkbox" name="toppings" id="salmon" value="2" disabled> <label for="salmon">Salmon</label>
             </td>
             <td>
                 <input type="checkbox" name="toppings" id="ham" value="3" disabled>
